# gmacrod

./: CMakeLists.txt  README.md
src/: globals.hpp  main.cpp
src/button_thread/: button.cpp  button.hpp  recorder.hpp  virtual_keyboard.hpp
src/ipc_thread/: ipc.cpp  ipc.hpp
src/lcd_thread/: lcd.cpp  lcd.hpp
src/profile/: profile.cpp  profile.hpp
